--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="HeadingController">
-        <button ng-click="console.log('clicked');">test</button>
+        <button ng-click="testclick">test</button>
             <div class="container">
                 <div class="col-lg-12 navbar-header">
                     <a class="threeBar" href="#"> </a>
