working on the menu; desktop screen

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                     </div>
                     <ul class="egmenu navbar mainnav">
                       <li class=" mainnav"><a href="#">Home</a></li>
-                      <li class="mainnav"><a href="#" class="has-sub" ng-mouseover="menus.accounts = !menus.accounts" ng-mouseleave="menus.accounts = !menus.accounts">Account</a>
+                      <li class="mainnav" ng-mouseover="menus.accounts = !menus.accounts" ng-mouseleave="menus.accounts = !menus.accounts"><a href="#" class="has-sub">Account</a>
                         <ul class="col-lg-1 mainnav" ng-if="menus.accounts">
                           <li class="mainnav"><a href="#">Scenerios</a></li>
                           <li class="mainnav"><a href="#">News</a></li>
@@ -43,7 +43,7 @@
                           <li class="mainnav"><a href="#">Directory</a></li> 
                         </ul>  
                       </li>
-                      <li class="mainnav"><a href="#" class="has-sub" ng-mouseover="console.log(menus);  menus.gaming = !menus.gaming" ng-mouseleave="console.log(menus);  menus.gaming = !menus.gaming">Gaming</a> 
+                      <li class="mainnav" ng-mouseover=" menus.gaming = !menus.gaming" ng-mouseleave=" menus.gaming = !menus.gaming"><a href="#" class="has-sub">Gaming</a> 
                         <ul class="col-lg-1 mainnav" ng-if="menus.gaming">
                           <li class="mainnav"><a href="#">Scenerios</a></li>
                           <li class="mainnav"><a href="#">News</a></li>
@@ -51,7 +51,7 @@
                           <li class="mainnav"><a href="#">Directory</a></li> 
                         </ul>  
                       </li>
-                      <li class="mainnav"><a href="#" class="has-sub" ng-mouseover="console.log(menus);  menus.literature = !menus.literature" ng-mouseleave="console.log(menus);  menus.literature = !menus.literature">Literature</a>
+                      <li class="mainnav" ng-mouseover=" menus.literature = !menus.literature" ng-mouseleave=" menus.literature = !menus.literature"><a href="#" class="has-sub">Literature</a>
                         <ul class="col-lg-1 mainnav" ng-if="menus.literature">
                           <li class="mainnav"><a href="#">Scenerios</a></li>
                           <li class="mainnav"><a href="#">News</a></li>
@@ -59,7 +59,7 @@
                           <li class="mainnav"><a href="#">Directory</a></li> 
                         </ul>  
                       </li>
-                      <li class="mainnav"><a href="#" class="has-sub" ng-mouseover="console.log(menus);  menus.conventions = !menus.conventions" ng-mouseleave="console.log(menus);  menus.conventions = !menus.conventions">Conventions</a>
+                      <li class="mainnav" ng-mouseover=" menus.conventions = !menus.conventions" ng-mouseleave=" menus.conventions = !menus.conventions"><a href="#" class="has-sub">Conventions</a>
                         <ul class="col-lg-1 mainnav" ng-if="menus.conventions">
                           <li class="mainnav"><a href="#">Scenerios</a></li>
                           <li class="mainnav"><a href="#">News</a></li>
@@ -67,7 +67,7 @@
                           <li class="mainnav"><a href="#">Directory</a></li> 
                         </ul>  
                       </li>
-                      <li class="mainnav"><a href="#" class="has-sub" ng-mouseover="console.log(menus);  menus.editorials = !menus.editorials" ng-mouseleave="console.log(menus);  menus.editorials = !menus.editorials">Editorials</a>
+                      <li class="mainnav" ng-mouseover=" menus.editorials = !menus.editorials" ng-mouseleave=" menus.editorials = !menus.editorials"><a href="#" class="has-sub">Editorials</a>
                         <ul class="col-lg-1 mainnav" ng-if="menus.editorials">
                           <li class="mainnav"><a href="#">Scenerios</a></li>
                           <li class="mainnav"><a href="#">News</a></li>
@@ -75,7 +75,7 @@
                           <li class="mainnav"><a href="#">Directory</a></li> 
                         </ul>  
                       </li>
-                      <li class="mainnav"><a href="#" class="has-sub" ng-click="menus.comedy = !menus.comedy" ng-mouseover="menus.comedy = !menus.comedy" ng-mouseleave="menus.comedy = !menus.comedy">Comedy</a>
+                      <li class="mainnav" ng-click="menus.comedy = !menus.comedy" ng-mouseover="menus.comedy = !menus.comedy" ng-mouseleave="menus.comedy = !menus.comedy"><a href="#" class="has-sub">Comedy</a>
                         <ul class="col-lg-1 mainnav" ng-if="menus.comedy">
                           <li class="mainnav"><a href="#">Scenerios</a></li>
                           <li class="mainnav"><a href="#">News</a></li>
@@ -83,7 +83,7 @@
                           <li class="mainnav"><a href="#">Directory</a></li> 
                         </ul>  
                       </li>
-                      <li class="mainnav"><a href="#" class="has-sub" ng-mouseover="console.log(menus);  menus.news = !menus.news" ng-mouseleave="console.log(menus);  menus.news = !menus.news">News</a>
+                      <li class="mainnav" ng-mouseover=" menus.news = !menus.news" ng-mouseleave=" menus.news = !menus.news"><a href="#" class="has-sub">News</a>
                         <ul class="col-lg-1 mainnav" ng-if="menus.news">
                           <li class="mainnav"><a href="#">Scenerios</a></li>
                           <li class="mainnav"><a href="#">News</a></li>
