--- a/public/index.html
+++ b/public/index.html
@@ -123,24 +123,11 @@
                     </ul>
                 </li>
             </ul>
-        <div class="sidenav_nav">
-            <div class="container">
-                <div class="col-lg-10"> </div>
-                <div class="col-lg-2 sidenav">
-                    Side Nav<br>
-                    Side Nav<br>
-                    Side Nav<br>
-                    Side Nav<br>
-                    Side Nav<br>
-                    Side Nav<br>
-                </div> 
-            </div>    
-        </div>
         </div><!-- /.navbar-collapse -->
     </nav>
     <div class="container">
-            <div class="col-lg-12 maincontainer">
-                <div class="col-lg-10">    
+            <div class="col-lg-12">
+                <div class="col-md-10">    
                     <div class="jumbotron">
                         <h1>Hello, world!</h1>
                         <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
@@ -190,6 +177,27 @@
                             <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
                         </div>
                     </div> 
+                </div>
+                <div class="col-md-2">
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
+                    <p>Stuff goes here</p>
                 </div>
             </div>
         </div>
