--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,8 @@
         </div>
     </nav>
     <div class="container">
-            <div class="col-lg-12 mancontainer">
+            <div class="col-lg-12 topspacer"> </div>
+            <div class="col-lg-12 maincontainer">
                 <div class="col-md-10">    
                     <div class="jumbotron" ng-controller="CarouselDemoCtrl">
                         <carousel interval="myInterval">
@@ -141,6 +142,17 @@
                           </slide>
                         </carousel>
                     </div>  
+                    <div class="form-group col-lg-12 viewswitcher">
+                        <label class="col-md-4">
+                            <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> Newest
+                        </label>
+                        <label class="col-md-4">
+                            <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> Most Popular
+                        </label>
+                        <label class="col-md-4">
+                            <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> Search
+                        </label>
+                    </div>   
                     <div class="col-lg-12">
                         <div class="col-md-4">
                             <h4>Some title goes here</h4>
@@ -186,34 +198,47 @@
                         </div>
                     </div> 
                 </div>
-                <div class="col-md-2">
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
-                    <p>Stuff goes here</p>
+                <div class="col-md-2 sidenav">
+                    <ol>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    <li>Stuff Goes Here</li>
+                    </ol>
                 </div>
             </div>
-        </div>
-        <hr>
-        <div class="col-lg-12">
-            <footer>
-                <p>&copy; Shoggoth.net & it's respected contributers. <span ng-app ng-controller="Ctrl">1998 - {{date | date:'yyyy'}}</span></p> 
-            </footer>
-        </div> <!-- /container -->        
+        </div>            
+        <footer>
+            <hr>
+            <div class="col-lg-12"> 
+                    <p>&copy; Shoggoth.net & it's respected contributers. <span ng-app ng-controller="Ctrl">1998 - {{date | date:'yyyy'}}</span></p> 
+            </div> <!-- /container -->        
+        </footer>
     </body>
 </html>
