--- a/public/index.html
+++ b/public/index.html
@@ -141,18 +141,16 @@
                             </div>
                           </slide>
                         </carousel>
-                    </div>  
-                    <div class="form-group col-lg-12 viewswitcher">
-                        <label class="col-md-4">
-                            <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> Newest
-                        </label>
-                        <label class="col-md-4">
-                            <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> Most Popular
-                        </label>
-                        <label class="col-md-4">
-                            <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> Search
-                        </label>
                     </div>   
+
+                    <tabset justified="true" >
+                        <tab select="sortArticles('newest')" heading="Newest"></tab>
+                        <tab select="sortArticles('popular')" heading="Popular"></tab> 
+                        <tab heading="Search">
+                            I've got an HTML heading, and a select callback. Pretty cool!
+                            <hr>
+                        </tab>
+                    </tabset>
                     <div class="col-lg-12">
                         <div class="col-md-4">
                             <h4>Some title goes here</h4>
