--- a/public/index.html
+++ b/public/index.html
@@ -232,11 +232,10 @@
                 </div>
             </div>
         </div>            
-        <footer>
-            <hr>
-            <div class="col-lg-12"> 
+        <footer> 
+            <div class="container col-lg-12"> 
                     <p>&copy; Shoggoth.net & it's respected contributers. <span ng-app ng-controller="Ctrl">1998 - {{date | date:'yyyy'}}</span></p> 
-            </div> <!-- /container -->        
+            </div> <!-- /container -->  
         </footer>
     </body>
 </html>
